export directive should be placed after the section text

--- a/mona/test/monalibc/string/Makefile
+++ b/mona/test/monalibc/string/Makefile
@@ -14,6 +14,6 @@ else
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
 
-CFLAGS += -DDEBUG -I . -I $(INCDIR)/monalibc
+CFLAGS += -DDEBUG -I . -I $(INCDIR)/monalibc -mno-stack-arg-probe
 
 -include dependencies
