Multimedia/audio_server/es1370.cpp (es1370_device_init): Fixed how to use isExist.

--- a/contrib/Multimedia/audio_server/Makefile
+++ b/contrib/Multimedia/audio_server/Makefile
@@ -38,7 +38,7 @@ $(TARGET).EX5: $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
-ADDLINK    = -lmonalibc-imp 
+ADDLINK    = -lmonalibc-imp  --enable-auto-import 
 ADDLINKDEP = 
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
