--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -323,9 +323,9 @@
 (define (tstd)
   (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5"))
 
-(display "libc test start")
-(tstr)
-(print "...")
-(tstd)
-(print "done")
+;; (display "libc test start")
+;; (tstr)
+;; (print "...")
+;; (tstd)
+;; (print "done")
 (gui)
