--- a/mona/core/scheme/lib/demo.scm.in
+++ b/mona/core/scheme/lib/demo.scm.in
@@ -1,6 +1,11 @@
 (define (on-gui-start)
   (as)
-  (hp))
+  (happy)
+  (uip)
+  (start-process "/APPS/MONAFRMS/BITMAP.EX5 /APPS/MONAFRMS/MONALISA.JPG 50 300")
+  (start-process "/APPS/BAYGUI/MINE.EX5")
+;  (display "uIP httpd started:\n  Try access http://localhost:8080/ from HOST OS")
+)
 ;  (mona-sleep 5000))
 ;  (hp)
 ;;   (start-process "/APPS/MONAFRMS/BITMAP.EX5 /APPS/MONAFRMS/SAKEBI.JPG 50 50")
