--- a/mona/core/scheme/lib/shell.scm.in
+++ b/mona/core/scheme/lib/shell.scm.in
@@ -172,6 +172,10 @@
 (define (gui)
   (start-process "/SERVERS/GUI.EX5 /APPS/MONAFRMS.INI" #t))
 
+(define (uip)
+  (start-process "/APPS/UIP.EX5" #t))
+
+
 (define (baygui)
   (start-process "/SERVERS/GUI.EX5 /APPS/BAYGUI.INI" #t))
 
