--- a/contrib/Emulators/monamona/Makefile
+++ b/contrib/Emulators/monamona/Makefile
@@ -5,6 +5,7 @@ INSTDIR = $(BINDIR)/APPS
 
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
+ADDLINK    = -lbaygui-imp -lmonalibc-imp --enable-auto-import
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
 include $(SHAREDIR)/configs/monapi-el5.inc
