--- a/contrib/Multimedia/xmonapeg/Makefile
+++ b/contrib/Multimedia/xmonapeg/Makefile
@@ -11,6 +11,6 @@ else
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
 
-ADDLINK = -L. -llen-cygwin -lbaygui-imp
+ADDLINK = -L. -llen-cygwin -lbaygui-imp --enable-auto-import
 
 -include dependencies
