--- a/mona/core/mouse_server/Makefile
+++ b/mona/core/mouse_server/Makefile
@@ -5,6 +5,8 @@ TARGET  = MOUSE
 SOURCES = main.cpp
 INSTDIR = $(BINDIR)/SERVERS
 
+ADDLINK    = --enable-auto-import
+
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
 include $(SHAREDIR)/configs/monapi-ex5.inc
