--- a/mona/test/monalibc/stdio/Makefile
+++ b/mona/test/monalibc/stdio/Makefile
@@ -9,7 +9,7 @@ INSTFILES = TEST.TXT
 $(TARGET).EX5: $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
-ADDLINK    =  -lmonalibc-imp
+ADDLINK    =  -lmonalibc-imp --enable-auto-import
 ifneq ($(BUILD_TARGET),ELF)
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
