--- a/contrib/Games/mtorz/Makefile
+++ b/contrib/Games/mtorz/Makefile
@@ -8,7 +8,7 @@ ADDLINK    = -lbaygui-imp -lmonalibc-imp
 ADDLINKDEP = $(MONADIR)/lib/libbaygui-imp.a $(MONADIR)/lib/libmonalibc-imp.a
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
-ADDLINK    = -lbaygui-imp -lmonalibc-imp -lmonapi-imp
+ADDLINK    = -lbaygui-imp -lmonalibc-imp -lmonapi-imp --enable-auto-import
 ADDLINKDEP = $(MONADIR)/lib/libbaygui.a $(MONADIR)/lib/libmonalibc.a
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
