--- a/contrib/Graphics/bitmap/Makefile
+++ b/contrib/Graphics/bitmap/Makefile
@@ -5,7 +5,7 @@ INSTDIR = $(BINDIR)/APPS/MONAFRMS
 INSTFILES  = MONALISA.JPG SAKEBI.JPG
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
-ADDLINK    = -lgui-imp -lmonalibc-imp
+ADDLINK    = -lgui-imp -lmonalibc-imp --enable-auto-import
 ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a $(MONADIR)/lib/libmonalibc-imp.a
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
