--- a/contrib/Multimedia/audio_server/client/Makefile
+++ b/contrib/Multimedia/audio_server/client/Makefile
@@ -13,11 +13,11 @@ $(TARGET).EX5: $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
-ADDLINK    = -lmonalibc-imp
+ADDLINK    = -lmonalibc-imp --enable-auto-import
 ADDLINKDEP = 
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
-ADDLINK    = -lmonalibc-imp -lmonapi-imp
+ADDLINK    = -lmonalibc-imp -lmonapi-imp 
 ADDLINKDEP = 
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
