--- a/contrib/Net/monadat/Makefile
+++ b/contrib/Net/monadat/Makefile
@@ -9,7 +9,7 @@ CLEANFILES = $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
-ADDLINK    = -lgui-imp -lmonalibc-imp
+ADDLINK    = -lgui-imp -lmonalibc-imp --enable-auto-import
 ADDLINKDEP = $(MONADIR)/lib/libgui-imp.a
 include $(SHAREDIR)/configs/monapi-ex5.inc
 else
