Added some files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,23 @@ mona/tool/mkimg/mona.iso
 mona/tool/t5lzma/7zip/Compress/LZMA_Alone/Makefile
 mona/tool/t5lzma/Makefile
 mona/tool/t5lzma/t5lzma
+contrib/Graphics/Mesa/.EXTRACT
+contrib/Graphics/Mesa/.FETCH
+contrib/Graphics/Mesa/.MAKE
+contrib/Graphics/Mesa/.PATCH
+contrib/Net/uip/.EXTRACT
+contrib/Net/uip/.FETCH
+contrib/Net/uip/.PATCH
+mona/core/scheme/BoehmGC/.EXTRACT
+mona/core/scheme/BoehmGC/.FETCH
+mona/core/scheme/BoehmGC/.MAKE
+mona/core/scheme/BoehmGC/.PATCH
+mona/core/scheme/onig/.EXTRACT
+mona/core/scheme/onig/.FETCH
+mona/core/scheme/onig/.MAKE
+mona/core/scheme/onig/.PATCH
+mona/external/onig/.EXTRACT
+mona/external/onig/.FETCH
+mona/external/onig/.MAKE
+mona/external/onig/.PATCH
+mona/tool/fat_write/.deps/
