include/monapi/Condition.h : Refactoring mutex and condition.

--- a/mona/Makefile
+++ b/mona/Makefile
@@ -105,4 +105,4 @@ endif
 	cd test/monalibc/string && make clean
 	cd test/monalibc/stdio && make clean
 	cd test/monapi/mutex && make clean
-	cd test/monapi/conditoin && make clean
+	cd test/monapi/condition && make clean
