--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -331,6 +331,7 @@
 (call-process "/APPS/TMUTEX.EX5")
 (call-process "/APPS/TCOND.EX5")
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
+(start-process "/APPS/NET.EX5")
 
 (print "all tests done") ;; this is required by check_tests.scm
 ;(gui)
