--- a/mona/tool/mkimg/MONITOR.CFG
+++ b/mona/tool/mkimg/MONITOR.CFG
@@ -7,7 +7,7 @@ SERVER=/SERVERS/KEYBDMNG.EX5
 SERVER=/SERVERS/MOUSE.EX5
 SERVER=/SERVERS/SCREEN.EX5
 #SERVER=/SERVERS/GUI.EX5
-SERVER=/SERVERS/NET.EX5
+#SERVER=/APPS/NET.EX5
 # uIP is launched by Scheme shell
 #SERVER=/APPS/UIP.EX5
 SERVER=/SERVERS/SCHEME.EX5
