--- a/mona/core/net_server/Makefile
+++ b/mona/core/net_server/Makefile
@@ -6,6 +6,7 @@ SOURCES    = main.cpp timer.cpp etherif.cpp
 CSOURCES   = \
 sys_arch.c \
 echo.c \
+shell.c \
 lwip-1.3.1/src/core/stats.c \
 lwip-1.3.1/src/core/dhcp.c \
 lwip-1.3.1/src/core/dns.c \
