--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -330,6 +330,7 @@
 (call-process "/APPS/TMISC.EX5")
 (call-process "/APPS/TMUTEX.EX5")
 (call-process "/APPS/TCOND.EX5")
+(call-process "/APPS/TMSG.EX5")
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
 (start-process "/APPS/NET.EX5")
 
