--- a/mona/core/monapi/Makefile
+++ b/mona/core/monapi/Makefile
@@ -46,6 +46,7 @@ SOURCES = monapi_impl.cpp \
           terminal/CommandParser.cpp \
           terminal/Util.cpp \
           net.cpp \
+          BufferReceiver.cpp \
           text/Line.cpp
 CSOURCES = FreeBSD/qdivrem.c FreeBSD/udivdi3.c
 
