Added an empty test for socket. (Green).

--- a/mona/Makefile
+++ b/mona/Makefile
@@ -49,6 +49,7 @@ tests: tools cores
 	cd test/monapi/condition && $(MAKE) && $(MAKE) install
 	cd test/monapi/misc && $(MAKE) && $(MAKE) install
 	cd test/monapi/message && $(MAKE) && $(MAKE) install
+	cd test/monapi/socket && $(MAKE) && $(MAKE) install
 
 mkimg: cores externals tools tests
 	cd tool/mkimg && $(MAKE) clean && $(MAKE)
