Added empty message loop to net_server.

--- a/mona/core/net_server/Makefile
+++ b/mona/core/net_server/Makefile
@@ -2,7 +2,7 @@ SRCTOP=../..
 include $(SRCTOP)/Makefile.inc
 
 TARGET     = NET
-SOURCES    = main.cpp timer.cpp etherif.cpp
+SOURCES    = main.cpp timer.cpp etherif.cpp messageLoop.cpp
 CSOURCES   = \
 sys_arch.c \
 echo.c \
