--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -333,6 +333,7 @@
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
 (call-process "/APPS/TMSG.EX5")
 (call-process "/APPS/TSOCK.EX5")
+(call-process "/APPS/HELLO.EX5")
 ;(start-process "/APPS/NET.EX5")
 
 (print "all tests done") ;; this is required by check_tests.scm
