comment out displayBuffer...

--- a/contrib/Net/monadat/Makefile
+++ b/contrib/Net/monadat/Makefile
@@ -24,7 +24,9 @@ $(TARGET).EXE: $(INSTFILES)
 
 .SUFFIXES: .dat .DT5
 .dat.DT5:
-	PATH=$(PATH):$(MONADIR)/tool/t5lzma bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
+	PATH="$(PATH):$(MONADIR)/tool/t5lzma" bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
+
+#mumurik	PATH="$(PATH):$(MONADIR)/tool/t5lzma" bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
 
 dat/MONALOGO.BM5: dat/MonaLogo.bmp
 	bim2bin in:$< out:$@ -osacmp -tek5 BS:0 eprm:z0
