--- a/contrib/w3m/Makefile
+++ b/contrib/w3m/Makefile
@@ -357,6 +357,9 @@ uninstall:
 alclean:
 	rm $(ALIBOBJS)
 
+cppclean:
+	rm $(CPPOBJS)
+
 distclean: clean
 	for subdir in po scripts w3mimg libwc; \
 	do \
