--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -1,4 +1,5 @@
-(define mona-gui-auto-start #f)
+;(define mona-gui-auto-start #f)
+(define mona-gui-auto-start #t)
 
 ;; (define (mona-gui-enum-windows) (list "GUI Shell" "/APPS"))
 ;; (define (mona-gui-get-window-title w) w)
@@ -333,7 +334,7 @@
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
 (call-process "/APPS/TMSG.EX5")
 (call-process "/APPS/TSOCK.EX5")
-(call-process "/APPS/HELLO.EX5")
+;(call-process "/APPS/HELLO.EX5")
 ;(start-process "/APPS/NET.EX5")
 
 (print "all tests done") ;; this is required by check_tests.scm
