fix table crash

--- a/contrib/w3m/Makefile
+++ b/contrib/w3m/Makefile
@@ -6,7 +6,7 @@
 #mumurik begin add
 TARGET  = W3M
 INSTDIR = $(BINDIR)/APPS/W3M/$(TARGET).APP
-INSTFILES  = ICONS.BM5
+INSTFILES  = doc/MANUAL.html
 CLEANFILES = $(INSTFILES)
 MONADIR=../../mona
 SHAREDIR   = $(MONADIR)/share
