--- a/mona/core/scheme/lib/demo.scm.in
+++ b/mona/core/scheme/lib/demo.scm.in
@@ -1,10 +1,11 @@
 (define (on-gui-start)
   (as)
-  (start-process "/MUSIC/HAPPY.EX5 -d /MUSIC/")
+;  (start-process "/MUSIC/HAPPY.EX5 -d /MUSIC/")
 ;  (start-process "/APPS/NET.EX5")
-  (start-process "/APPS/MONAFRMS/BITMAP.EX5 /APPS/MONAFRMS/MONALISA.JPG 50 300")
-  (start-process "/APPS/BAYGUI/MINE.EX5")
-  (start-process "/APPS/BAYGUI/GNOTE.EX5")
+;  (start-process "/APPS/MONAFRMS/BITMAP.EX5 /APPS/MONAFRMS/MONALISA.JPG 50 300")
+;  (start-process "/APPS/BAYGUI/MINE.EX5")
+;  (start-process "/APPS/BAYGUI/GNOTE.EX5")
+  (start-process "/APPS/MONAFRMS/MONADAT.APP/MONADAT.EX5")
 ;  (display "uIP httpd started:\n  Try access http://localhost:8080/ from HOST OS")
 )
 ;  (mona-sleep 5000))
