--- a/mona/test/monapi/ram_disk/Makefile
+++ b/mona/test/monapi/ram_disk/Makefile
@@ -2,7 +2,7 @@ ifndef $(MONADIR)
 export MONADIR=$(shell cd $(PWD)/../../../; pwd)
 endif
 
-TARGET  = RAMDISK
+TARGET  = TRAMDISK
 SOURCES = ram_disk.cpp
 INSTDIR = $(BINDIR)/APPS
 
