--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -334,6 +334,7 @@
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
 (call-process "/APPS/TMSG.EX5")
 (call-process "/APPS/TSOCK.EX5")
+(call-process "/APPS/TRAMDISK.EX5")
 ;(call-process "/APPS/HELLO.EX5")
 ;(start-process "/APPS/NET.EX5")
 
