--- a/contrib/w3m/Makefile
+++ b/contrib/w3m/Makefile
@@ -4,7 +4,7 @@
 
 TARGET  = W3M
 INSTDIR = $(BINDIR)/APPS/W3M/$(TARGET).APP
-DOCDIR=doc
+DOCDIR=doc-jp
 INSTFILES  = $(DOCDIR)/MANUAL.html $(DOCDIR)/FAQ.html  $(DOCDIR)/STORY.html  $(DOCDIR)/README  $(DOCDIR)/README.cygwin  $(DOCDIR)/README.dict  $(DOCDIR)/README.func  $(DOCDIR)/README.img  $(DOCDIR)/README.m17n  $(DOCDIR)/README.mouse  $(DOCDIR)/README.pre_form  $(DOCDIR)/README.tab  $(DOCDIR)/keymap.default  $(DOCDIR)/keymap.lynx  $(DOCDIR)/menu.default  $(DOCDIR)/menu.submenu 
 CLEANFILES = funcname.c funcname1.h funcname2.h
 MONADIR=../../mona
