RamDisk fix, add some test that reason is still unknown.

--- a/mona/test/monalibc/stdio/Makefile
+++ b/mona/test/monalibc/stdio/Makefile
@@ -5,7 +5,7 @@ endif
 TARGET  = TSTDIO
 SOURCES = test.cpp
 INSTDIR = $(BINDIR)/APPS/TSTDIO.APP
-INSTFILES = TEST.TXT
+INSTFILES = TEST.TXT TEST.JPG
 $(TARGET).EX5: $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
