--- a/mona/Makefile
+++ b/mona/Makefile
@@ -51,6 +51,7 @@ tests: tools cores
 	cd test/monapi/misc && $(MAKE) && $(MAKE) install
 	cd test/monapi/message && $(MAKE) && $(MAKE) install
 	cd test/monapi/socket && $(MAKE) && $(MAKE) install
+	cd test/monapi/die && $(MAKE) && $(MAKE) install
 
 mkimg: cores externals tools tests
 	cd tool/mkimg && $(MAKE) clean && $(MAKE)
