--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -267,6 +267,22 @@
           (else #f))
     (loop (+ 1 i))))
 
+(define (recv name)
+  (call-process (string-append "/APPS/FRECV.EX5 " name)))
+
+(define (recvrun name)
+  (call-process (string-append "/APPS/FRECV.EX5 " name))
+  (call-process (string-append "/MEM/" name)))
+
+(define (tlisten)
+  (recvrun "TEST.EX5")
+  (tlisten))
+
+(define (testmap)
+  (recv "TEST.MAP")
+  (recvrun "TEST.EX5"))
+
+
 (define (asA)
   (start-process "/APPS/AUDIO.EX5"))
 
@@ -332,7 +348,7 @@
 (call-process "/APPS/TMUTEX.EX5")
 (call-process "/APPS/TCOND.EX5")
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
-(call-process "/APPS/TMSG.EX5")
+;(call-process "/APPS/TMSG.EX5")
 (call-process "/APPS/TSOCK.EX5")
 (call-process "/APPS/TRAMDISK.EX5")
 (call-process "/APPS/TDIE.EX5")
