cookie related fix?

--- a/contrib/w3m/Makefile
+++ b/contrib/w3m/Makefile
@@ -23,7 +23,7 @@ MONAAPP_PATH=/APPS/W3M/W3M.APP
 CGIBIN_DIR = $(MONAAPP_PATH)
 AUXBIN_DIR = $(MONAAPP_PATH)
 HELP_DIR = $(MONAAPP_PATH)
-RC_DIR = $(MONAAPP_PATH)
+RC_DIR =/MEM
 ETC_DIR = $(MONAAPP_PATH)
 CONF_DIR = $(MONAAPP_PATH)
 LOCALE_DIR = $(MONAAPP_PATH)
