(Green) Enabled stacktrace with map file on GNOTE.

--- a/contrib/Misc/gnote/Makefile
+++ b/contrib/Misc/gnote/Makefile
@@ -16,6 +16,7 @@ rootwindow.cpp \
 gnote.cpp
 
 INSTDIR = $(BINDIR)/APPS/BAYGUI
+INSTFILES = GNOTE.map
 SHAREDIR   = $(MONADIR)/share
 ifneq ($(BUILD_TARGET),ELF)
 ADDLINK    = -lbaygui-imp -lmonalibc-imp --enable-auto-import
