--- a/mona/core/scheme/lib/demo.scm.in
+++ b/mona/core/scheme/lib/demo.scm.in
@@ -6,7 +6,7 @@
 ;  (start-process "/APPS/BAYGUI/MINE.EX5")
 ;  (start-process "/APPS/BAYGUI/GNOTE.EX5")
 ;  (start-process "/APPS/MONAFRMS/MONADAT.APP/MONADAT.EX5")
-(start-process "/APPS/W3M/W3M.APP/W3M.EX5 http://www.hatena.ne.jp/login")
+(start-process "/APPS/W3M/W3M.APP/W3M.EX5 http://www.monaos.org/links.html")
 ;  (display "uIP httpd started:\n  Try access http://localhost:8080/ from HOST OS")
 )
 ;  (mona-sleep 5000))
