--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -348,7 +348,7 @@
 (call-process "/APPS/TMUTEX.EX5")
 (call-process "/APPS/TCOND.EX5")
 (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
-;(call-process "/APPS/TMSG.EX5")
+(call-process "/APPS/TMSG.EX5")
 ;(call-process "/APPS/TSOCK.EX5")
 (call-process "/APPS/TRAMDISK.EX5")
 (call-process "/APPS/TDIE.EX5")
