--- a/mona/core/kernel/Makefile
+++ b/mona/core/kernel/Makefile
@@ -51,6 +51,7 @@ SOURCES      = cstart.cpp            \
                Uart.cpp              \
                NE2000.cpp            \
                gdb-i386-stub.cpp     \
+               KObjectService.cpp    \
                addressmap.cpp
 
 OBJECTS = $(SOURCES:.cpp=.o)
