--- a/contrib/Gui/monafile/Makefile
+++ b/contrib/Gui/monafile/Makefile
@@ -1,7 +1,7 @@
 TARGET  = MONAFILE
 SOURCES = FileManager.cpp FileWindow.cpp FileBrowser.cpp Icon.cpp
 INSTDIR = $(BINDIR)/APPS/MONAFRMS/$(TARGET).APP
-INSTFILES  = ICONS.BM5
+INSTFILES  = ICONS.BMP
 CLEANFILES = $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
