--- a/mona/Makefile
+++ b/mona/Makefile
@@ -48,6 +48,7 @@ tests: tools cores
 	cd test/monalibc/string && $(MAKE) && $(MAKE) install
 	cd test/monalibc/stdio && $(MAKE) && $(MAKE) install
 	cd test/monapi/mutex && $(MAKE) && $(MAKE) install
+	cd test/monapi/stack_trace && $(MAKE) && $(MAKE) install
 	cd test/monapi/condition && $(MAKE) && $(MAKE) install
 	cd test/monapi/misc && $(MAKE) && $(MAKE) install
 	cd test/monapi/message && $(MAKE) && $(MAKE) install
