--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -356,6 +356,8 @@
 ;; (print "...")
 ;; (tstd)
 ;; (print "done")
+(call-process "/APPS/TSTACK.APP/TSTACK.EX5")
+(call-process "/APPS/HELLO.EX5")
 (call-process "/APPS/MOSH.EX5 -5")
 (call-process "/APPS/TMISC.EX5")
 (call-process "/APPS/TMUTEX.EX5")
