--- a/mona/test/monapi/stack_trace/Makefile
+++ b/mona/test/monapi/stack_trace/Makefile
@@ -5,7 +5,7 @@ endif
 TARGET  = TSTACK
 SOURCES = stack_trace.cpp
 INSTDIR = $(BINDIR)/APPS/TSTACK.APP
-INSTFILES = TEST.MAP
+INSTFILES = TEST.map
 $(TARGET).EX5: $(INSTFILES)
 
 SHAREDIR   = $(MONADIR)/share
