Stack trace for Scheme.

--- a/mona/core/scheme/Makefile.mona
+++ b/mona/core/scheme/Makefile.mona
@@ -33,6 +33,7 @@ install:all
 	mkdir -p $(INSTDIR)
 	$(INSTALL) -pd $(BINDIR)/LIBS/SCHEME
 	$(INSTALL) -pd $(INSTDIR)/TEST
+	$(INSTALL) -p SCHEME.map $(BINDIR)/APPS
 	$(INSTALL) -p $(TARGET).EX5 $(INSTDIR)
 	$(INSTALL) -p  $(TEST_FILES) $(INSTDIR)/TEST
 	$(INSTALL) -p $(TARGET_LIBS) $(BINDIR)/LIBS/SCHEME
