--- a/mona/core/scheme/lib/conf.scm.in
+++ b/mona/core/scheme/lib/conf.scm.in
@@ -358,25 +358,26 @@
 
 (define (mosh)
   (call-process "/APPS/FRECV.EX5 MOSH.EXE")
-  (call-process "/MEM/MOSH.EXE -5 /LIBS/SCHEME/fib.scm")
+  (call-process "/MEM/MOSH.EXE")
+  (ls "/MEM")
   (mosh))
 
 ;; (tstr)
 ;; (print "...")
 ;; (tstd)
 ;; (print "done")
-(call-process "/APPS/TSTACK.APP/TSTACK.EX5")
-(call-process "/APPS/HELLO.EX5")
-(call-process "/APPS/TMISC.EX5")
-(call-process "/APPS/TMUTEX.EX5")
-(call-process "/APPS/TCOND.EX5")
-(call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
-(call-process "/APPS/TMSG.EX5")
-(call-process "/APPS/TSYSCALL.EX5")
-(call-process "/APPS/TRAMDISK.EX5")
-(call-process "/APPS/TDIE.EX5")
-(call-process "/APPS/TSOCK.EX5")
-(call-process "/APPS/HELLO.EX5")
+;; (call-process "/APPS/TSTACK.APP/TSTACK.EX5")
+;; (call-process "/APPS/HELLO.EX5")
+;; (call-process "/APPS/TMISC.EX5")
+;; (call-process "/APPS/TMUTEX.EX5")
+;; (call-process "/APPS/TCOND.EX5")
+;; (call-process "/APPS/TSTDIO.APP/TSTDIO.EX5")
+;; (call-process "/APPS/TMSG.EX5")
+;; (call-process "/APPS/TSYSCALL.EX5")
+;; (call-process "/APPS/TRAMDISK.EX5")
+;; (call-process "/APPS/TDIE.EX5")
+;; (call-process "/APPS/TSOCK.EX5")
+;; (call-process "/APPS/HELLO.EX5")
 ;(start-process "/APPS/NET.EX5")
 
 (print "all tests done") ;; this is required by check_tests.scm
