--- a/mona/core/scheme/lib/interact.scm.in
+++ b/mona/core/scheme/lib/interact.scm.in
@@ -56,4 +56,4 @@
 ;; ./scheme  10.48s user 1.24s system 48% cpu 24.231 total
 ;; ./scheme  3.00s user 0.36s system 100% cpu 3.360 total
 
-;(mosh)
+(mosh)
